# microvision

./: .gitignore  ARCHITECTURE.md  README.md  clean.sh  cleanup_cache.sh  pyproject.toml  quick_train.py
examples/: advanced_usage.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_model_analysis.ipynb  04_experiments.ipynb
notebooks/experiments/logs/: events.out.tfevents.1761377503.ruskaruma-Predator-PHN16-71.267545.0  events.out.tfevents.1761377689.ruskaruma-Predator-PHN16-71.267545.1  events.out.tfevents.1761378713.ruskaruma-Predator-PHN16-71.266236.0  events.out.tfevents.1761378731.ruskaruma-Predator-PHN16-71.266236.1  events.out.tfevents.1761378868.ruskaruma-Predator-PHN16-71.266232.0  events.out.tfevents.1761381318.ruskaruma-Predator-PHN16-71.289582.0  events.out.tfevents.1761381366.ruskaruma-Predator-PHN16-71.289582.1  events.out.tfevents.1761381630.ruskaruma-Predator-PHN16-71.289582.2  events.out.tfevents.1761381938.ruskaruma-Predator-PHN16-71.289582.3  events.out.tfevents.1761384334.ruskaruma-Predator-PHN16-71.289581.0  events.out.tfevents.1761384339.ruskaruma-Predator-PHN16-71.289581.1  events.out.tfevents.1761386694.ruskaruma-Predator-PHN16-71.289583.0  events.out.tfevents.1761386737.ruskaruma-Predator-PHN16-71.289583.1  events.out.tfevents.1761386788.ruskaruma-Predator-PHN16-71.289583.2  events.out.tfevents.1761386841.ruskaruma-Predator-PHN16-71.289583.3  events.out.tfevents.1761386864.ruskaruma-Predator-PHN16-71.289583.4  (+46 more)
src/: __init__.py  config.py  datasets.py  model_registry.py  models.py  trainer.py  utils.py
